# pet

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt
Frontend/: index.html
backend/: alembic.ini  create_fastapi_app.py  main.py  requirements.txt
backend/alembic/: env.py
backend/core/models/: base.py  kinopub.py
cinema_app/: package-lock.json  package.json
src/: .env.template  create_fastapi_app.py  main.py
src/CRUD/: films.py
src/alembic/: env.py
src/alembic/versions/: 2024_07_07_2351-04a1e0a0ac69_added_user_table.py  2024_07_10_2252-58011a5cb0bf_added_kinopub_models.py  2024_07_10_2333-b72a6c2bee2b_added_kinopub_models.py  2024_08_04_2248-31af144e5d13_added_users_model.py  2024_08_07_2207-946caa7aef5d_added_field_for_tvshows.py  2024_08_08_1300-1a632f73ade1_fix_column.py  2024_08_08_1307-8c098361de71_fix_column.py
src/api/api_v1/: __init__.py  films.py  users.py
src/api/api_v1/auth/: auth.py  db.py  helpers.py  test_cookies.py  validation.py
src/api/api_v1/auth_fastapi_users/: router.py  user_manager.py
src/api/api_v1/demo_auth/: __init__.py  helpers.py
src/core/: config.py  fixtures.sql  s3.py
src/core/models/: __init__.py  db_helper.py  films.py  user.py
src/core/schemas/: films.py  user.py
src/utils/: jwt_utils.py
